--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,55 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
+### YamlMime:Yaml
+ms.openlocfilehash: 1f16ddecd0df0d946cdcc20c946ed58193f9f1c2
+ms.sourcegitcommit: f3937681c3f6e310355071e1842967695e365751
+ms.translationtype: HT
+ms.contentlocale: fr-FR
+ms.lasthandoff: 10/29/2021
+ms.locfileid: "130823975"
 trigger:
-- main
-
+- '*'
 pool:
-  vmImage: ubuntu-latest
-
+  vmImage: ubuntu-20.04
+  demands:
+  - npm
 variables:
-  buildConfiguration: 'Release'
-
+  buildConfiguration: Release
+  wwwrootDir: Tailspin.SpaceGame.Web/wwwroot
+  dotnetSdkVersion: 5.x
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: UseDotNet@2
+  displayName: Use .NET SDK $(dotnetSdkVersion)
+  inputs:
+    version: $(dotnetSdkVersion)
+- task: Npm@1
+  displayName: Run npm install
+  inputs:
+    verbose: false
+- script: ./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)
+  displayName: Compile Sass assets
+- task: gulp@1
+  displayName: Run gulp tasks
+- script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
+  displayName: Write build info
+  workingDirectory: $(wwwrootDir)
+- task: DotNetCoreCLI@2
+  displayName: Restore project dependencies
+  inputs:
+    command: restore
+    projects: '**/*.csproj'
+- task: DotNetCoreCLI@2
+  displayName: Build the project - $(buildConfiguration)
+  inputs:
+    command: build
+    arguments: --no-restore --configuration $(buildConfiguration)
+    projects: '**/*.csproj'
+- task: DotNetCoreCLI@2
+  displayName: Publish the project - $(buildConfiguration)
+  inputs:
+    command: publish
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: --no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)
+    zipAfterPublish: true
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
